<resources>
    <string name="app_name">Markers GoogleMaps</string>
    <string name="action_settings">Settings</string>
    <string name="main_fragment_label">My Markers</string>
    <string name="map_fragment_label">Map</string>
    <string name="gps_not_allowed">You must give permission to use location</string>
    <string name="add_marker">add marker</string>
    <string name="empty_posts">Nothing to show yet. You can swipe to refresh or add new marker.</string>
    <string name="marker_logo">marker logo</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="toast_empty_marker_list">You have not created any placemarks on the map yet. Try to do this by long tap on the desired map object.</string>
    <string name="title">Title</string>
    <string name="dialog_fragment_title">New Marker</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="empty_title_warning">The marker title cannot be empty!</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="edit_dialog_fragment_title">Edit Marker</string>
    <string name="exit">Exit</string>
    <string name="marker">Marker</string>
</resources>